Adding component activity

--- a/planning-app/src/app/app.component.html
+++ b/planning-app/src/app/app.component.html
@@ -1,1 +1,10 @@
-<h1>Planning App</h1>
+<header>
+    <h1>{{ currentDate | date: 'dd/MM/yyyy'}}</h1>
+</header>
+<section class="main flex-container">
+    <app-activity [activity]="activity"></app-activity>
+    <app-activity [activity]="activity"></app-activity>
+    <app-activity [activity]="activity"></app-activity>
+    <app-activity [activity]="activity"></app-activity>
+    <app-activity [activity]="activity"></app-activity>
+</section>
