improving look & feel

--- a/planning-app/src/app/activities/components/activity/activity.component.css
+++ b/planning-app/src/app/activities/components/activity/activity.component.css
@@ -1,6 +1,11 @@
 .activity-card {
     width: 200px;
     margin: 20px 5px;
+    height: 100%;
+}
+
+.activity-card mat-card-header {
+    min-height: 20%;
 }
 
 .activity-card mat-card-header mat-icon {
