--- a/planning-app/src/app/app.component.scss
+++ b/planning-app/src/app/app.component.scss
@@ -1,8 +1,9 @@
 header, section.main {
+    
     width: 90%;
     margin: 0 auto;
-}
-
-header h1 {
-    text-align: center;
+    
+    h1 {
+        text-align: center;
+    }
 }
