--- a/planning-app/src/app/activity/components/activity/activity.component.scss
+++ b/planning-app/src/app/activity/components/activity/activity.component.scss
@@ -3,6 +3,11 @@
     width: 200px;
     margin: 20px 5px;
     height: 100%;
+    // background-color: lightgreen;
+    // background-color: lightyellow;
+    // background-color: lightsalmon;
+    // background-color: lightcoral;
+    background-color: #f0f0f0;
 
     mat-card-header {
         min-height: 20%;
