Adding date adpter

--- a/planning-app/src/app/activity/components/activity-list/activity-list.component.html
+++ b/planning-app/src/app/activity/components/activity-list/activity-list.component.html
@@ -2,7 +2,7 @@
     <form [formGroup]="filtersForm">
         <mat-form-field color="primary" appearance="fill">
             <mat-label>Select date:</mat-label>
-            <input formControlName="date" matInput [matDatepicker]="date">
+            <input formControlName="date" matInput [matDatepicker]="date" (click)="date.open()">
             <mat-datepicker-toggle matSuffix [for]="date"></mat-datepicker-toggle>
             <mat-datepicker #date></mat-datepicker>
         </mat-form-field>
